force-app/main/default/objects/Form_LCF_Grant_Term_1__c/Form_LCF_Grant_Term_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Additional Term - 1.0</description>
    <label>Form LCF Grant Term 1.0</label>
    <nameField>
        <displayFormat>GT-{00000}</displayFormat>
        <label>Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>