force-app/main/default/objects/Form_LCF_Grant_Term_1__c/fields/gt_description__c.field-meta.xml
<CustomField>
    <fullName>gt_description__c</fullName>
    <inlineHelpText>Additional term and when it will be met by</inlineHelpText>
    <label>GT - Description</label>
    <type>TextArea</type>
</CustomField>