force-app/main/default/objects/Form_LCF_Grant_Term_1__c/fields/lcf_grant__c.field-meta.xml
<CustomField>
    <fullName>lcf_grant__c</fullName>
    <description>Parent LCF Grant</description>
    <inlineHelpText>Parent LCF Grant</inlineHelpText>
    <label>LCF Grant</label>
    <referenceTo>LCF_Grant__c</referenceTo>
    <relationshipLabel>Form LCF Grant Terms</relationshipLabel>
    <relationshipName>grant_terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>